crates/weft-tui/src/ui/snapshots/weft_tui__ui__tests__in_the_agent.snap
---
source: crates/weft-tui/src/ui.rs
expression: drawn
---
 ╸┃╺ WEFT                                                 [T]URBO OFF   OPEN  1
 ▸ 1 codex    +
────────────────────────────────────────────────────────────────────────────────
█

















────────────────────────────────────────────────────────────────────────────────
  Ctrl+]  BACK TO WEFT
 Every other key goes to the agent, Esc included.
