crates/weft-tui/src/ui/snapshots/weft_tui__ui__tests__side_by_side.snap
---
source: crates/weft-tui/src/ui.rs
expression: drawn
---
 ╸┃╺ WEFT                                                                                         [T]URBO OFF   OPEN  1
                                       │ ▸ 1 codex    +
───────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────
 ▾ [project] 1 open  ⌫ │█
   ▾ codex                             │
      health endpoint         EVALED   │
      readme fix               ASKED   │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
───────────────────────────────────────┴────────────────────────────────────────────────────────────────────────────────
  [A]SK   [E]VAL   [S]EAL                                                                                      [W]EFT ⌄
 [H]ELP lists every key.
