crates/weft-tui/src/ui/snapshots/weft_tui__ui__tests__the_eval_view_step.snap
---
source: crates/weft-tui/src/ui/tests.rs
expression: drawn
---
 ╸┃╺ WEFT                                                                                         [T]URBO OFF   OPEN  1
 EVAL · health endpoint                                                                                           evl_2
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 EVAL drifted · confidence 0.75 · drift: commission 2%, omission 50%
 A STEP
 ✗ 7  A failed send is told.                                                                                    not met
   Done when: A test with a refusing CLI.
 FOUND
   unclaimed rewrite: commit 94d7989 ("Follow-up work") rewrites lines of 758156f (7)
 READINGS
   reduce: met  the person is told
   confirm: not met  the follow-up drops the refusal again
     missing: unrecorded is never set
 CHANGES (1)
   · src/server.rs  w_b                                                                                        required














────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  [↑↓] MOVE   [D] THE CHANGE                                                                                 [ESC] BACK
 [H]ELP lists every key.
