crates/weft-tui/src/ui/snapshots/weft_tui__ui__tests__the_list_hidden.snap
---
source: crates/weft-tui/src/ui.rs
expression: drawn
---
 ╸┃╺ WEFT                                                                                         [T]URBO OFF   OPEN  1
 ▸ 1 codex    +
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
█

























────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
  [A]SK   [E]VAL   [S]EAL                                                                                      [W]EFT ⌄
 The list is hidden. [B] brings it back.
