crates/weft-tui/src/ui/snapshots/weft_tui__ui__tests__the_ringframe_view.snap
---
source: crates/weft-tui/src/ui/tests.rs
expression: drawn
---
 ╸┃╺ WEFT                                                                            ↑ [U]PDATE   [T]URBO OFF   OPEN  1
                                       │ ▸ 1 codex    +
───────────────────────────────────────┼────────────────────────────────────────────────────────────────────────────────
 ▾ [project] 1 open  ⌫ │█
   ▾ codex                             │
                                       │
 [A]SK for something and Weft writes it│
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
                                       │
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 RINGFRAME
 Latest release v0.1.3 · rf 0.1.3
 RingFrame's configuration: up to date

 Sign in to a harness yourself first: Weft runs its own plugin
 commands, then asks it again. Your rules are not touched.

   Error: not signed in

   ▸ !  Antigravity   failed: agy plugin install https://github.com/fab7hq/f…
     ↑  Claude Code   rf 0.1.2 → 0.1.3
     ✗  Codex         not found
     ✓  Zed Agent     ready · rf 0.1.3

───────────────────────────────────────┴────────────────────────────────────────────────────────────────────────────────
  [↑↓] PICK   [P]ROCEED ALL   [ESC] CLOSE
 Weft never changes an agent without asking you first.
